user entity created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=garagediary
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/GarageDB
+spring.datasource.url=jdbc:mysql://localhost:3306/securityapp
 spring.datasource.username=root
 spring.datasource.password=MAYUR@260204
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
