Service_center and feedback

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=garagediary
 
-spring.datasource.url=jdbc:mysql://localhost:3306/securityapp
+spring.datasource.url=jdbc:mysql://localhost:3306/garagedb
 spring.datasource.username=root
-spring.datasource.password=MAYUR@260204
+spring.datasource.password=root1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
