--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=garagediary
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/garagedb
-#spring.datasource.username=root
-#spring.datasource.password=root1234
+spring.datasource.url=jdbc:mysql://localhost:3306/garagedb
+spring.datasource.username=root
+spring.datasource.password=root1234
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+#spring.datasource.url=${DATABASE_URL}
+#spring.datasource.username=${DATABASE_USERNAME}
+#spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,6 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 
-//Secret_key
+#Secret_key
 jwt.secret.key = dsfgbvcxdsfe34342csdvdsfvsdf3444323vsdfvasfv
 
